--- a/hackathon_frontend/package.json
+++ b/hackathon_frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.21.6",
+    "axios": "^0.27.2",
     "firebase": "^9.9.0",
     "framer-motion": "^6.5.1",
     "moralis": "^1.9.0",
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "crypto": false
   }
 }
