--- a/hackathon_frontend/.env
+++ b/hackathon_frontend/.env
@@ -2,3 +2,4 @@ REACT_APP_NFTC_PROXY_ADDRESS = 0xd8Ad6001551Ced68c536De41F18C575185d49738
 REACT_APP_POLYGON_SCAN_API_KEY = 1Z4E7FJKIACJRYC3YS9IANAXC6XEJ1IUUD
 REACT_APP_DB_ENDPOINT = https://hackathon-project-3ae89-default-rtdb.firebaseio.com/
 REACT_APP_INFURA_KEY = ZiPX0JtXnVqQ56RGdvdy8mvCOs4ZDchO
+REACT_APP_ETHEREUM_NETWORK = "mumbai"
