--- a/hackathon_frontend/package.json
+++ b/hackathon_frontend/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.9.0",
     "https": "^1.0.0",
     "ipfs-http-client": "^57.0.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
