--- a/hackathon_frontend/package.json
+++ b/hackathon_frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hackathon_frontend",
   "version": "0.1.0",
+  "homepage": "https://sumukhah.github.io/eth_global_hackathon",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -25,6 +26,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +53,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "gh-pages": "^4.0.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
